fixed front-end deployemnt bug

--- a/nexcredis-frontend/tsconfig.json
+++ b/nexcredis-frontend/tsconfig.json
@@ -24,12 +24,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./*"
       ]
     },
     "target": "ES2017"
   },
   "include": [
+    "types/**/*.d.ts",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
