modifed netlify deployment file to handle path correctly

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "nexcredis-frontend"
   command = "npm run build"
-  publish = "nexcredis-frontend/.next"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
