--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "nexcredis-frontend"
-  command = "npm run build && npm run export"
-  publish = ".next"
+  command = "npm run build"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
